[gd_scene load_steps=2 format=3 uid="uid://cdxptr0ahbrr0"]

[ext_resource type="Script" uid="uid://df7il5c55vq38" path="res://scripts/pause_menu.gd" id="1_hu113"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hu113")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="top" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="mid" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="left" type="VBoxContainer" parent="BoxContainer/mid"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="mid" type="VBoxContainer" parent="BoxContainer/mid"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Panel" type="Panel" parent="BoxContainer/mid/mid"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="BoxContainer/mid/mid/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="top_padding" type="VBoxContainer" parent="BoxContainer/mid/mid/Panel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="center" type="HBoxContainer" parent="BoxContainer/mid/mid/Panel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="left_padding" type="HBoxContainer" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="center" type="VBoxContainer" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center"]
layout_mode = 2

[node name="resume" type="Button" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center"]
layout_mode = 2
text = "RESUME"

[node name="settings" type="Button" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center"]
layout_mode = 2
text = "SETTINGS"

[node name="main_menu" type="Button" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center"]
layout_mode = 2
text = "MAIN MENU"

[node name="right_padding" type="HBoxContainer" parent="BoxContainer/mid/mid/Panel/VBoxContainer2/center"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="bottom_padding" type="VBoxContainer" parent="BoxContainer/mid/mid/Panel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="confirmation_panel" type="Panel" parent="BoxContainer/mid/mid/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/mid/mid/Panel/confirmation_panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
text = "ARE YOU SURE YOU WANT TO QUIT YOUR CURRENT GAME?"
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 3

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer"]
layout_mode = 2

[node name="BoxContainer3" type="BoxContainer" parent="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="confirm" type="Button" parent="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CONFIRM"

[node name="BoxContainer2" type="BoxContainer" parent="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cancel" type="Button" parent="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "CANCEL"

[node name="BoxContainer" type="BoxContainer" parent="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="right" type="VBoxContainer" parent="BoxContainer/mid"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="bot" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[connection signal="pressed" from="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="BoxContainer/mid/mid/Panel/VBoxContainer2/center/center/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer/HBoxContainer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="BoxContainer/mid/mid/Panel/confirmation_panel/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
